# anistropic_diffusion

./: .gitignore  CMakeLists.txt  ReadMe.md  Ujj.mat  explicit.cpp  ichol.cpp  ichol.h  implicit.cpp  laplace.cpp  run.sh  smooth2d.cpp  smooth3d.cpp  test_blas.cpp  test_lapack.cpp  util.h
